--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
+name: Roman Oshchypok, Pik-Studio
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
+
+
 contacts:
   phone: +380685006977
