--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Roman Oshchypok, Pik-Studio
+name: Roman Oshchypok, Pik-Studio2
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
