--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-name: Roman Oshchypok, Pik-Studio2
+name: Hank Quinlan, Horrible Cop
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
-
-
-contacts:
-  phone: +380685006977
