--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+
+contacts:
+  phone: +380685006977
