--- a/_data/rooms.yml
+++ b/_data/rooms.yml
@@ -2,7 +2,7 @@ title: Кімнати і ціни
 
 rooms:
   -
-    title: Звичайна кимніта
+    title: Звичайна кімната
     price: 250
     description: Опис звичайної кімнати
     images:
@@ -18,4 +18,3 @@ rooms:
         - Тут описуються опції кожної кімнати
         - Їх може бути до п'яти
         - Якщо опція займає два рядки, то зменшується загальна кількість опцій
-
