--- a/_data/rooms.yml
+++ b/_data/rooms.yml
@@ -18,3 +18,31 @@ list:
         - Тут описуються опції кожної кімнати
         - Їх може бути до п'яти
         - Якщо опція займає два рядки, то зменшується загальна кількість опцій
+
+  -
+      title: Кімната інша
+      price: 250
+      description: Опис іншої звичайної кімнати
+      images:
+        -
+          title: Кімната
+          url: room2.png
+
+      options:
+          - Тут описуються опції кожної кімнати
+          - Їх може бути до п'яти
+          - Якщо опція займає два рядки, то зменшується загальна кількість опцій
+
+    -
+        title: Апартаменти
+        price: 450
+        description: Опис апартаментів
+        images:
+          -
+            title: Кімната
+            url: apartaments.png
+
+        options:
+            - Тут описуються опції кожної кімнати
+            - Їх може бути до п'яти
+            - Якщо опція займає два рядки, то зменшується загальна кількість опцій
