--- a/_data/params.yml
+++ b/_data/params.yml
@@ -1,4 +1,5 @@
 name: Хостел на Зеленій
 haslo: Будь в центрі!
 phone: 38-(067)-674-72-55
-address: м. Львів, вул. Зелена, 20
+address: вул. Зелена, 20<br/>Львів
+email: greenhostel@gmail.com
