--- a/_data/about.yml
+++ b/_data/about.yml
@@ -6,12 +6,9 @@ context:
   text:
     rows:
       -
-        Текст про Хостел на Зеленій
+        Наш хостел розташований в центрі Львова на одній з найважливіших вулиць міста – Зеленій. Лише за кілька хвилин пішого ходу ви дістанетеся історичного центру міста. Всього за кілька кроків від нас починається історія.
       -
-        Наступний абзац
-
-      -
-        Кожен абзац в окремому блоці
+        Приємна і тепла атмосфера дасть змогу насолодитися відпочинком. Поряд з хостелом є кілька нічних клубів, кафе та ресторанів, магазинів і недорогих кав’ярень.
 
     signature:
       title: Адміністрація
