--- a/_data/rooms.yml
+++ b/_data/rooms.yml
@@ -2,9 +2,9 @@ title: Кімнати і ціни
 
 list:
   -
-    title: Звичайна кімната
-    price: 250
-    description: Опис звичайної кімнати
+    title: Змішані кімнати на 4-6 місць
+    price: 150 - 180
+    description: До Ваших послуг в хостелі є кімнати для спільного проживання на 4 та шість місць.
     images:
       -
         title: Кімната
@@ -15,33 +15,30 @@ list:
         url: kitchen.png
 
     options:
-        - Тут описуються опції кожної кімнати
-        - Їх може бути до п'яти
-        - Якщо опція займає два рядки, то зменшується загальна кількість опцій
+        - Для кожного ліжкомісця є окрема тумба з встановленими замками.
+        - Ліжка зроблені з цільного дерева та обладнані ортопедичними матрасами
 
   -
-      title: Кімната інша
-      price: 250
-      description: Опис іншої звичайної кімнати
+      title: Кімната для дівчат
+      price: 180
+      description: Для клієнток доступна кімната «тільки для дівчат», яка розрахована на чотирьох осіб.
       images:
         -
           title: Кімната
           url: room2.png
 
       options:
-          - Тут описуються опції кожної кімнати
-          - Їх може бути до п'яти
-          - Якщо опція займає два рядки, то зменшується загальна кількість опцій
+          - Для кожного ліжкомісця є окрема тумба з встановленими замками.
+          - Ліжка зроблені з цільного дерева та обладнані ортопедичними матрасами
 
   -
       title: Апартаменти
-      price: 450
-      description: Опис апартаментів
+      price: 230
+      description: Кімната розрахована двох осіб.
       images:
         -
           title: Кімната
           url: apartaments.png
       options:
-          - Тут описуються опції кожної кімнати
-          - Їх може бути до п'яти
-          - Якщо опція займає два рядки, то зменшується загальна кількість опцій
+          - Ліжка покращеної якості гарантують максимальний комфорт
+          - В кімнаті є окремий телевізор та зручна шафа для одягу
