update room price

--- a/_data/rooms.yml
+++ b/_data/rooms.yml
@@ -3,7 +3,9 @@ title: Кімнати і ціни
 list:
   -
     title: Змішані кімнати на 4-6 місць
-    price: 150 - 180
+    price:
+      text: за ліжко за ніч
+      amount: 150 - 180
     description: До Ваших послуг в хостелі є кімнати для спільного проживання на 4 та шість місць.
     images:
       -
@@ -20,7 +22,9 @@ list:
 
   -
       title: Кімната для дівчат
-      price: 180
+      price:
+        text: за ліжко за ніч
+        amount: 180
       description: Для клієнток доступна кімната «тільки для дівчат», яка розрахована на чотирьох осіб.
       images:
         -
@@ -33,7 +37,9 @@ list:
 
   -
       title: Апартаменти
-      price: 230
+      price:
+        text: за ніч
+        amount: 230
       description: Кімната розрахована двох осіб.
       images:
         -
