add text offers

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -9,9 +9,9 @@ list:
     options:
 
   -
-    title: За умови проживання більше 3-х днів ми надаємо спеціальну знижку
+    title: Знижка за термін проживання
     haslo: <b>Найкраща</b> ціна
-    description:
+    description: За умови проживання більше 3-х днів ми надаємо спеціальну знижку
     image: logo_background.png
     options:
       - більше 3-х днів - 20 відсотків
