--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -11,7 +11,7 @@ list:
   -
     title: Знижка за термін проживання
     haslo: <b>Найкраща</b> ціна
-    description: Знижка за умови проживання більше:
+    description: Знижка за умови проживання більше
     image: logo_background.png
     options:
       - більше 3-х днів - 20 відсотків
