--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -14,12 +14,13 @@ list:
     description: Знижка за умови проживання більше
     image: logo_background.png
     options:
-      - більше 3-х днів - 20 відсотків
-      - більше місяця - 30 відсотків
+      - більше 3-х днів - 20 відсотків;
+      - більше місяця - 30 відсотків;
 
   -
     title: Фітнес – центр
     haslo: <b>Найкраща</b> ціна
-    description: Клієнти «Хостелу на Зеленій» мають можливість займатися у фітнес-центрі всього за половину вартості.
+    description: Клієнти «Хостелу на Зеленій» мають можливість займатися у сучасному фітнес-центрі.
     image: logo_background.png
     options:
+      - знижка 50 відсоткі.
