--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -23,4 +23,4 @@ list:
     description: Клієнти «Хостелу на Зеленій» мають можливість займатися у сучасному фітнес-центрі.
     image: logo_background.png
     options:
-      - знижка 50 відсоткі.
+      - знижка 50 відсотків.
