add text offers

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -14,8 +14,8 @@ list:
     description: Знижка за умови проживання більше
     image: logo_background.png
     options:
-      - більше 3-х днів - 20 відсотків;
-      - більше місяця - 30 відсотків;
+      - більше 3-х днів - 20%;
+      - більше місяця - 30%;
 
   -
     title: Фітнес – центр
@@ -23,4 +23,4 @@ list:
     description: Клієнти «Хостелу на Зеленій» мають можливість займатися у сучасному фітнес-центрі.
     image: logo_background.png
     options:
-      - знижка 50 відсотків.
+      - знижка 50%.
