--- a/_data/params.yml
+++ b/_data/params.yml
@@ -1,5 +1,5 @@
 name: Хостел на Зеленій
 haslo: Будь в центрі!
-phone: 38-(067)-674-72-55
+phone: 38-(097)-821-0552, +38-(063)-539-2002
 address: вул. Зелена, 20<br/>Львів
 email: greenhostel@gmail.com
